- removed data_path from store configuration to MyrecoAPI and Factory constructors; - renamed model engine_cores to engine_strategies; - created a new model called engine_objects. this model is to reuse the same objects (arrays, matrices, etc) across engines; - associated the objects to engines. - moved data_importer and objects exporters from engines model to engine_objects model. Now all the objects are built separated (instead build all together inside engine); - splited the engine configuration to engine_objects (each object have your own configuration); - moved ItemsIndicesMaps to items module; - added a name property to VariationsModel.
