# myreco/stores/swagger.json
@@ -84,7 +84,7 @@
             "properties": {
                 "name": {"type": "string"},
                 "country": {"type": "string"},
-                "configuration": {"$ref": "#/definitions/configuration"}
+                "configuration": {}
             }
         },
         "schema_array": {
@@ -97,15 +97,8 @@
                 "properties": {
                     "name": {"type": "string"},
                     "country": {"type": "string"},
-                    "configuration": {"$ref": "#/definitions/configuration"}
+                    "configuration": {}
                 }
-            }
-        },
-        "configuration": {
-            "type": "object",
-            "required": ["data_path"],
-            "properties": {
-                "data_path": {"type": "string"}
             }
         }
     }
